--- a/public/css/webService.css
+++ b/public/css/webService.css
@@ -261,6 +261,7 @@ padding-left: 1% !important;
 
 .verde{
 	background-image: url(images/IconoV.png);
+	background-color: #0087FF !important;
 	background-size: contain;
 	background-position: center;
 	height: 30px;
@@ -269,6 +270,7 @@ padding-left: 1% !important;
 
 .rojo{
 	background-image: url(images/IconoR.png);
+	background-color: #0087FF !important;
 	background-size: contain;
 	background-position: center;
 	height: 30px;
@@ -277,6 +279,7 @@ padding-left: 1% !important;
 
 .amarillo{
 	background-image: url(images/IconoA.png);
+	background-color: #0087FF !important;
 	background-size: contain;
 	background-position: center;
 	height: 30px;
