--- a/public/css/webService.css
+++ b/public/css/webService.css
@@ -7,6 +7,30 @@ a{
 	max-height: 100px;
 	margin:0% !important;
 	padding: 0% !important;
+	
+}
+
+.opcion{
+margin-left: 10% !important;
+padding-right: 5% !important;
+margin-right: 5% !important;
+width: 120% !important;
+font-size: 90% !important;
+}
+
+button.navbar-toggle{
+	background-color: #048cd4 !important;
+	margin-right: 0% !important;
+	padding-left: 2% !important;
+
+}
+div#navdos.navbar-collapse.col-lg-4.collapse.in.show{
+	background-color:#048cd4 !important;
+	margin-top: 0% !important;
+	margin-left: 5% !important;
+	padding-right: 6% !important;
+	border-color: #048cd4 !important;
+	float: right !important;
 }
 
 .dropdown-menu{
@@ -32,12 +56,10 @@ a{
 	width: 100px;
 }
 
-#navuno{
-	float:left;
-}
+
 
 #navdos{
-	float:right;
+	float:right !important;
 	font-size: 100%;
 }
 
@@ -85,8 +107,6 @@ th {
 	font-size: 16px !important;
 }
 
-
-
 h3{
 	text-align:center !important;
 	font-weight: 900;
@@ -107,14 +127,12 @@ table {
 	border-collapse: unset;
 }
 
-
 table,th,td {
 	border: 1px solid black;
 }
 
 .encabezado .tabletitles{
 	text-align: center;
-
 }
 
 .btn-group-vertical>.btn-group:after, .btn-group-vertical>.btn-group:before, .btn-toolbar:after, .btn-toolbar:before, .clearfix:after, .clearfix:before, .container-fluid:after, .container-fluid:before, .container:after, .container:before, .dl-horizontal dd:after, .dl-horizontal dd:before, .form-horizontal .form-group:after, .form-horizontal .form-group:before, .modal-footer:after, .modal-footer:before, .modal-header:after, .modal-header:before, .nav:after, .nav:before, .navbar-collapse:after, .navbar-collapse:before, .navbar-header:after, .navbar-header:before, .navbar:after, .navbar:before, .pager:after, .pager:before, .panel-body:after, .panel-body:before, .row:after, .row:before {
@@ -141,9 +159,11 @@ table,th,td {
 
 #eventos{
 	position: absolute !important;
+	background-position: center !important;
 	height: 100% !important;
 	width: 100% !important;
 	background-image:url(images/primer_dia.png);
+	background-repeat: no-repeat !important;
 	width: 100% !important;
 	z-index: -1 !important;
 	margin:0% !important;
@@ -349,11 +369,13 @@ font-size: 80% !important;
 
 #background_web{
 	background-image: url(images/background.jpg);
-	background-position: center !important;
+	margin-left: 15% !important;
+	margin-right:15% !important: 
 	background-size: contain;
 	background-repeat: no-repeat;
-	background-size: 60% !important;
+	background-size: 80% !important;
 	height: 815px !important;
+	margin-top: 0% !important;
 }
 
 /*Login Google*/
