Filtros resumen alumnos y resumen eventos

--- a/public/css/webService.css
+++ b/public/css/webService.css
@@ -242,7 +242,7 @@ padding-left: 4% !important;
    	font-style: initial;
    	color: black !important;
    	margin-top: 1% !important;
-}	
+}
 
 #cabecera_dashboard{
 text-align:center !important;
@@ -298,7 +298,7 @@ padding-right: 0.2% !important;
 	height: 25px;
 	width: 25px !important;
 	margin-top: 1% !important;
-	
+
 }
 
 .rojo_tv{
@@ -309,7 +309,7 @@ padding-right: 0.2% !important;
 	height: 25px;
 	width: 25px;
 	margin-top: 1% !important;
-	
+
 
 }
 
@@ -321,7 +321,7 @@ padding-right: 0.2% !important;
 	height: 25px;
 	width:  25px;
 	margin-top: 1% !important;
-	
+
 }
 
 
@@ -337,7 +337,7 @@ padding-right: 0.2% !important;
     overflow: hidden;
     background-color: #FAFAFA !important;
     font-size: 75% !important;
-}	
+}
 
 #cabecera_dashboardTv{
 text-align:center !important;
@@ -383,4 +383,26 @@ a.buttonText {
   font-weight: bold;
   /* Use the Roboto font that is loaded in the <head> */
   font-family: 'Roboto', sans-serif;
+}
+
+/*Estilo de los cuadros de filtrado*/
+
+.form-filtro {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.form-filtro .form-group {
+  flex-grow: 1;
+  padding: 0 5px 0 0;
+  flex-basis: 10%;
+}
+
+.form-filtro .form-control {
+  width: 100%;
+}
+
+.form-filtro .form-nowrap {
+  white-space: nowrap;
 }
