--- a/public/css/webService.css
+++ b/public/css/webService.css
@@ -420,8 +420,6 @@ a.buttonText {
   font-family: 'Roboto', sans-serif;
 }
 
-<<<<<<< HEAD
-=======
 /*Estilo de los cuadros de filtrado*/
 
 .form-filtro {
@@ -443,4 +441,11 @@ a.buttonText {
 .form-filtro .form-nowrap {
   white-space: nowrap;
 }
->>>>>>> 7d7df26253a9ca59921c33d1ebb88cb8de37bbe5
+#tarjeta{
+	background-image: url(images/miniyo.jpeg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	height: 150px;
+	width: 150px;
+}
